tests/baselines/reference/constDeclarationShadowedByVarDeclaration.errors.txt
tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts(7,9): error TS4090: Cannot initialize outer scope variable 'x' when having block-scoped variable with the same name.
tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts(15,13): error TS4090: Cannot initialize outer scope variable 'y' when having block-scoped variable with the same name.
tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts(22,7): error TS4090: Cannot initialize outer scope variable 'z' when having block-scoped variable with the same name.


==== tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts (3 errors) ====
    
    // Error as declaration of var would cause a write to the const value
    var x = 0;
    {
        const x = 0;
    
        var x = 0;
            ~
!!! error TS4090: Cannot initialize outer scope variable 'x' when having block-scoped variable with the same name.
    }
    
    
    var y = 0;
    {
        const y = 0;
        {
            var y = 0;
                ~
!!! error TS4090: Cannot initialize outer scope variable 'y' when having block-scoped variable with the same name.
        }
    }
    
    
    {
      const z = 0;
      var z = 0
          ~
!!! error TS4090: Cannot initialize outer scope variable 'z' when having block-scoped variable with the same name.
    }